<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Congregation</string>
    <string name="hello"> Congregation Data</string>
    <string name="cari">Type Name</string>
    <string name="no_ang">Cong. No</string>
    <string name="nomor">Index </string>
    <string name="nama">Name </string>
    <string name="alamat">Address </string>
    <string name="gender">Gender </string>
    <string name="ubah">Change</string>
    <string name="app_edit">Edit</string>
    <string name="hadir">Present</string>
    <string name="lahir">Birth Day </string>
    <string name="tgl">Date</string>
    <string name="tg">Day</string>
    <string name="bl">Month</string>
    <string name="th">Year</string>
    <string name="phone">Phone </string>
    <string name="simpan">Save</string>
    <string name="pekerjaan">Job </string>
    <string name="pendidikan">Education </string>
    <string name="bs">B/S </string>
    <string name="reset">Reset</string>
    <string name="ultah">BirthDay</string>
    <string name="kosong"> </string>
    <string name="present">Present</string>
    <string name="tutup">Close</string>
    <string name="list_b">List of Birthday this month</string>
    
    <string-array name="gender">
        <item>Gender</item>
        <item>W</item>
        <item>M</item>
        <item>-</item>
    </string-array>    
    
    <string-array name="bs">
        <item>B/S</item>
        <item>B</item>
        <item>S</item>
        <item>-</item>
    </string-array>    

    <string-array name="dd">
        <item>Education</item>
        <item>Pre School</item>
        <item>Elementary</item>
        <item>High School</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>Master</item>
        <item>Doctor</item>                
        <item>-</item>
    </string-array>    
    
    <string-array name="kj">
        <item>Job</item>
        <item>Farmer</item>
        <item>Trader</item>
        <item>House Wife</item>
        <item>Teacher</item>
        <item>Goverment Emp.</item>
        <item>Private Emp.</item>
        <item>Retired</item>
        <item>Army</item>
        <item>Pupil</item>
    </string-array>    

    <string-array name="tg">
        <item>dy</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    
    <string-array name="bl">
        <item>mn</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>        
    </string-array>
    
    <string-array name="th">
        <item>year</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="thh" >
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>
